# Game-Programming-in-CPP-Chapter-1-

./: CMakeLists.txt  Makefile  README.md
scripts/: build.sh
src/: game.cpp  game.h  main.cpp
